- FIXED: Entity page components turn on the hitbox debug renderer.