@@ -1,2 +1,2 @@
-// 1.21.1	2025-06-13T08:48:33.8917889	Languages: en_us for mod: modopedia
-ecbb4a3177df7ce0492ce280eba2806874f5305d assets/modopedia/lang/en_us.json
+// 1.21.1	2025-06-15T03:06:29.4970597	Languages: en_us for mod: modopedia
+232f4f7bc29703b67dc557e6cb0bd63be0609891 assets/modopedia/lang/en_us.json
